map's zoom modified

--- a/virus/index.html
+++ b/virus/index.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>covid-19 in Italia</title>
+    <title>covIT-19</title>
     <link rel="icon" type="image/png" href="../assets/virus/dark-icon.png" id="dark-icon">
     <link rel="icon" type="image/png" href="../assets/virus/light-icon.png" id="light-icon">
 
@@ -27,7 +27,7 @@
         <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
             <div class="container-fluid">
                 <a href="" class="navbar-brand">
-                    <img class="navbar-brand" src="../assets/virus/light-icon.png" height="50px" alt="logo"> covid-19 in Italia </a>
+                    <img class="navbar-brand" src="../assets/virus/light-icon.png" height="50px" alt="logo"> covIT-19 </a>
                 <button type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation" class="navbar-toggler"><span class="navbar-toggler-icon"></span></button>
                 <div id="navbarSupportedContent" class="collapse navbar-collapse" style="padding-right: 50px;">
                     <ul class="navbar-nav ml-auto">
